cluster/images-vs-canary.yaml
#
# SFU CMPT 756
#
# Istio yaml to deploy a VirtualService
#
# This version demonstrates a simple "canary" deployment.
# It assumes that two versions of service S2 have
# been deployed, v1 and v2. It uses the Istio traffic-shaping
# features to split the traffic 90% to v1 and 10% to v2
#
# DestinationRule lists the subset destination Kubernetes Services
# that will receive traffic from the Istio VirtualService.
# VirtualService routes URLs to the destinations, splitting the traffic
# across destinations according to weights.
#
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: images
spec:
  host: images
  subsets:
    - name: v1
      labels:
        version: v1
    - name: v2
      labels:
        version: v2
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: images
spec:
  hosts:
    # We do not know the hostname of traffic from this gateway, so
    # apply this VS to every request entering it.
    - "*"
  # As an externally-visible service, this only applies to the gateway
  gateways:
    - c756marketplace-gateway
  http:
    - match:
        - uri:
            prefix: /api/v1/images
      rewrite:
        uri: /api/v1/images
      route:
        - destination:
            host: images
            subset: v1
          weight: 90
        - destination:
            host: images
            subset: v2
          weight: 10
